# local_RAG

./: .gitignore  README.md  chat_interface.py  config.json  config.py  document_processor.py  main.py  pyproject.toml  rag_chain.py  vector_store.py
data/documents/: sample.txt
