[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=0.3.3",
    "langchain-community>=0.0.16",
    "langchain-chroma>=0.0.3",
    "chromadb>=0.4.22",
    "langchain-core>=0.1.17",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
]
